更新同步到官方7a6405f，同时修复了工具修复材料的问题