@@ -1,19 +1,29 @@
 package slimeknights.tconstruct.plugin.jei.melting;
 
 import com.mojang.datafixers.util.Pair;
+import it.unimi.dsi.fastutil.objects.Object2IntMap;
+import it.unimi.dsi.fastutil.objects.Object2IntMaps;
+import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
+import mezz.jei.api.constants.VanillaTypes;
+import mezz.jei.api.ingredients.IIngredientHelper;
+import mezz.jei.api.ingredients.subtypes.UidContext;
+import mezz.jei.api.runtime.IIngredientManager;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.Items;
-import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.item.crafting.Ingredient;
+import net.minecraft.world.item.crafting.RecipeType;
 import net.neoforged.neoforge.common.util.Lazy;
 import net.neoforged.neoforge.fluids.FluidStack;
+import slimeknights.tconstruct.TConstruct;
+import slimeknights.tconstruct.common.TinkerTags;
+import slimeknights.tconstruct.library.recipe.TinkerRecipeTypes;
 import slimeknights.tconstruct.library.recipe.fuel.MeltingFuel;
 
 import java.util.Arrays;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class MeltingFuelHandler {
   /**
@@ -21,10 +31,16 @@ public class MeltingFuelHandler {
    * Sorted from highest to lowest temperature
    */
   private static List<Pair<Integer,List<FluidStack>>> fuelLookup = Collections.emptyList();
-
-  /** List of solid fuels for solid melting */
-  public static final Lazy<List<ItemStack>> SOLID_FUELS = Lazy.of(() -> Arrays.asList(
-    new ItemStack(Items.COAL), new ItemStack(Items.CHARCOAL), new ItemStack(Blocks.OAK_LOG), new ItemStack(Blocks.OAK_PLANKS), new ItemStack(Items.BLAZE_ROD)));
+  /** List of all solid fuels from the JEI recipe manager. */
+  private static List<ItemStack> allSolidFuels = List.of();
+  /** Map of fuel durations for all stacks */
+  private static Object2IntMap<Object> fuelDurations = Object2IntMaps.emptyMap();
+  /** Ingredient showing examples of fuels */
+  private static final Ingredient FUEL_EXAMPLES = slimeknights.tconstruct.library.recipe.TinkerIngredients.of(TinkerTags.Items.FUEL_EXAMPLES);
+  /** List of solid fuels for solid melting examples */
+  public static final Lazy<List<ItemStack>> SOLID_FUELS = Lazy.of(() -> List.of(slimeknights.tconstruct.library.recipe.TinkerIngredients.getItems(FUEL_EXAMPLES)));
+  /** Item stack helper for grabbing cache keys */
+  private static IIngredientHelper<ItemStack> itemHelper = null;
 
   /**
    * Updates the melting cache, called on JEI load
@@ -36,13 +52,13 @@ public class MeltingFuelHandler {
     sortedFuels.sort(Comparator.comparingInt(MeltingFuel::getTemperature));
     // get a list of temperature to fuel
     fuelLookup = sortedFuels.stream()
-                      .mapToInt(MeltingFuel::getTemperature)
-                      .distinct()
-                      .mapToObj((temperature) -> Pair.of(temperature, sortedFuels.stream()
-                          .filter(fuel -> fuel.getTemperature() >= temperature)
-                          .flatMap(fuel -> fuel.getInputs().stream())
-                          .collect(Collectors.toList())))
-                      .collect(Collectors.toList());
+      .mapToInt(MeltingFuel::getTemperature)
+      .distinct()
+      .mapToObj((temperature) -> Pair.of(temperature, sortedFuels.stream()
+        .filter(fuel -> fuel.getTemperature() >= temperature && !fuel.getInputs().isEmpty())
+        .flatMap(fuel -> fuel.getInputs().stream())
+        .toList()))
+      .toList();
   }
 
   /**
@@ -58,5 +74,46 @@ public class MeltingFuelHandler {
       }
     }
     return Collections.emptyList();
+  }
+
+
+  /* Solid fuels */
+
+  /** Sets the solid fuels from the given fuel stacks */
+  public static void registerSolidFuels(IIngredientManager ingredientManager) {
+    Collection<ItemStack> allStacks = ingredientManager.getAllItemStacks();
+    List<ItemStack> fuels = new ArrayList<>(allStacks.size());
+    Object2IntMap<Object> newFuels = new Object2IntOpenHashMap<>(allStacks.size());
+    itemHelper = ingredientManager.getIngredientHelper(VanillaTypes.ITEM_STACK);
+    RecipeType<?> fuel = TinkerRecipeTypes.FUEL.get();
+    for (ItemStack stack : allStacks) {
+      try {
+        int burnTime = stack.getBurnTime(fuel, net.minecraft.client.Minecraft.getInstance().level.fuelValues());
+        if (burnTime > 0) {
+          fuels.add(stack);
+          newFuels.put(itemHelper.getUid(stack, UidContext.Ingredient), burnTime);
+        }
+      } catch (RuntimeException | LinkageError e) {
+        TConstruct.LOG.error("Failed to check if item is fuel {}.", stack, e);
+      }
+    }
+    allSolidFuels = List.copyOf(fuels);
+    fuelDurations = Object2IntMaps.unmodifiable(newFuels);
+  }
+
+  /** Gets a list of all solid fuels for display in the fuel category */
+  public static List<ItemStack> getAllSolidFuels() {
+    if (allSolidFuels.isEmpty()) {
+      return SOLID_FUELS.get();
+    }
+    return allSolidFuels;
+  }
+
+  /** Gets the duration of the given item stack */
+  public static int getFuelDuration(ItemStack stack) {
+    if (itemHelper != null) {
+      return fuelDurations.getOrDefault(itemHelper.getUid(stack, UidContext.Ingredient), 0);
+    }
+    return 0;
   }
 }
