@@ -16,6 +16,8 @@ import net.minecraft.world.item.BannerItem;
 import net.minecraft.world.item.BlockItem;
 import net.minecraft.world.item.DyeColor;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
+import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.entity.BannerPattern;
@@ -29,6 +31,8 @@ import slimeknights.tconstruct.library.json.IntRange;
 import slimeknights.tconstruct.library.modifiers.ModifierEntry;
 import slimeknights.tconstruct.library.modifiers.ModifierId;
 import slimeknights.tconstruct.library.recipe.RecipeResult;
+import slimeknights.tconstruct.library.recipe.display.RecipeSlot;
+import slimeknights.tconstruct.library.recipe.display.RecipeSlots;
 import slimeknights.tconstruct.library.recipe.modifiers.ModifierRecipeLookup;
 import slimeknights.tconstruct.library.recipe.modifiers.adding.IDisplayModifierRecipe;
 import slimeknights.tconstruct.library.recipe.tinkerstation.ITinkerStationContainer;
@@ -41,6 +45,7 @@ import slimeknights.tconstruct.tools.TinkerModifiers;
 import slimeknights.tconstruct.tools.modules.cosmetic.BannerModule;
 
 import javax.annotation.Nullable;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -103,6 +108,11 @@ public class BannerModifierRecipe implements ITinkerStationRecipe, IMultiRecipe<
     return found;
   }
 
+  /** Gets the list of patterns from the banner stack */
+  private static BannerPatternLayers getBannerPatterns(ItemStack banner) {
+    return banner.getOrDefault(DataComponents.BANNER_PATTERNS, BannerPatternLayers.EMPTY);
+  }
+
   @Override
   public RecipeResult<LazyToolStack> getValidatedResult(ITinkerStationContainer inv, HolderLookup.Provider access) {
     ToolStack tool = inv.getTinkerable().copy();
@@ -129,15 +139,16 @@ public class BannerModifierRecipe implements ITinkerStationRecipe, IMultiRecipe<
     }
 
     // get the banner data
-    BannerPatternLayers patterns = banner.getOrDefault(DataComponents.BANNER_PATTERNS, BannerPatternLayers.EMPTY);
+    BannerPatternLayers patterns = getBannerPatterns(banner);
     for (int i = 0; i < inv.getInputCount(); i++) {
       if (!inv.getInput(i).isEmpty() && slimeknights.tconstruct.library.recipe.TinkerIngredients.matches(clearInput, inv.getInput(i))) {
-        if (patterns.layers().isEmpty()) {
-          return RecipeResult.failure(TConstruct.makeTranslationKey("recipe", "banner.clear.no_patterns"));
-        }
         dye = null;
         break;
       }
+    }
+    // disallow no patterns when going clear
+    if (dye == null && patterns.layers().isEmpty()) {
+      return RecipeResult.failure(TConstruct.makeTranslationKey("recipe", "banner.clear.no_patterns"));
     }
 
     // apply the pattern
@@ -161,6 +172,7 @@ public class BannerModifierRecipe implements ITinkerStationRecipe, IMultiRecipe<
   @Nullable
   private List<IDisplayModifierRecipe> displayRecipes;
 
+
   @Override
   public List<IDisplayModifierRecipe> getRecipes(HolderLookup.Provider access) {
     if (displayRecipes == null) {
@@ -171,44 +183,49 @@ public class BannerModifierRecipe implements ITinkerStationRecipe, IMultiRecipe<
             stack = stack.copyWithCount(Math.min(stack.getMaxStackSize(), DEFAULT_TOOL_STACK_SIZE));
           }
           return stack;
-      }).toList();
-      if (!toolInputs.isEmpty()) {
-        Identifier id = getId();
-        Stream<IDisplayModifierRecipe> recipes = RegistryHelper.getTagValueStream(BuiltInRegistries.ITEM, ItemTags.BANNERS)
-          .flatMap(item -> {
-            if (item instanceof BannerItem banner) {
-              return Stream.of(new DisplayRecipe(id, toolInputs, banner.getColor(), List.of(new ItemStack(banner)), List.of(), BannerPatternLayers.EMPTY));
-            }
-            return Stream.empty();
-          });
-        // If a clear ingredient exists, add a separate JEI recipe showing the clear operation.
-        if (clearInput != slimeknights.tconstruct.library.recipe.TinkerIngredients.EMPTY) {
-          BannerPatternLayers samplePatterns = createSamplePatterns(access);
-          List<ItemStack> patternedBanners = RegistryHelper.getTagValueStream(BuiltInRegistries.ITEM, ItemTags.BANNERS)
-            .map(item -> {
-              ItemStack stack = new ItemStack(item);
-              stack.set(DataComponents.BANNER_PATTERNS, samplePatterns);
-              return stack;
-            }).toList();
-          recipes = Stream.concat(recipes, Stream.of(new DisplayRecipe(
-            id, toolInputs, null, patternedBanners, List.of(slimeknights.tconstruct.library.recipe.TinkerIngredients.getItems(clearInput)), samplePatterns
-          )));
-        }
-        displayRecipes = recipes.collect(Collectors.toList());
-      } else {
+        }).toList();
+      List<ItemStack> banners = RegistryHelper.getTagValueStream(BuiltInRegistries.ITEM, ItemTags.BANNERS)
+        .filter(item -> item instanceof BannerItem)
+        .map(ItemStack::new).toList();
+      if (toolInputs.isEmpty()) {
+        // emptying banner tag is fine, if a little weird
+        TConstruct.LOG.debug("Skipping creating banner modifier display recipes {}: No tools in tag {}", id, TinkerTags.Items.BANNER);
         displayRecipes = List.of();
+      } else if (banners.isEmpty()) {
+        TConstruct.LOG.error("Unable to create banner modifier display recipes {}: Banner tag {} has no BannerItem", id, ItemTags.BANNERS);
+        displayRecipes = List.of();
+      } else {
+        Identifier id = getId();
+        List<IDisplayModifierRecipe> recipes = new ArrayList<>(clearInput != slimeknights.tconstruct.library.recipe.TinkerIngredients.EMPTY ? 2 : 1);
+        // create standard recipe
+        recipes.add(new DisplayRecipe(id, toolInputs, banners, List.of()));
+        // if we have an ingredient that makes it clear, add the clear recipe
+        if (clearInput != slimeknights.tconstruct.library.recipe.TinkerIngredients.EMPTY) {
+          // we want a pattern on it to make it more clear what it does
+          // but put a white pattern on the black banner for visibility
+          BannerPatternLayers blackPattern = createSamplePatterns(access, DyeColor.BLACK);
+          BannerPatternLayers whitePattern = createSamplePatterns(access, DyeColor.WHITE);
+          // add the recipe to the end of the stream
+          List<ItemStack> bannersWithPattern = banners.stream().map(stack -> {
+            stack = stack.copy();
+            stack.set(DataComponents.BANNER_PATTERNS, stack.is(Items.BLACK_BANNER) ? whitePattern : blackPattern);
+            return stack;
+          }).toList();
+          recipes.add(new DisplayRecipe(id, toolInputs, bannersWithPattern, List.of(slimeknights.tconstruct.library.recipe.TinkerIngredients.getItems(clearInput))));
+        }
+        displayRecipes = List.copyOf(recipes);
       }
     }
     return displayRecipes;
   }
 
   /** Creates one visible pattern for the JEI clear-banner example. */
-  private static BannerPatternLayers createSamplePatterns(HolderLookup.Provider access) {
+  private static BannerPatternLayers createSamplePatterns(HolderLookup.Provider access, DyeColor color) {
     Holder<BannerPattern> cross = access.lookupOrThrow(Registries.BANNER_PATTERN).get(BannerPatterns.CROSS).orElse(null);
     if (cross == null) {
       return BannerPatternLayers.EMPTY;
     }
-    return new BannerPatternLayers(List.of(new BannerPatternLayers.Layer(cross, DyeColor.BLACK)));
+    return new BannerPatternLayers(List.of(new BannerPatternLayers.Layer(cross, color)));
   }
 
   /** Display recipe instance */
@@ -218,7 +235,7 @@ public class BannerModifierRecipe implements ITinkerStationRecipe, IMultiRecipe<
 
     @Getter
     private final Identifier recipeId;
-    private final List<ItemStack> banner;
+    private final List<ItemStack> banners;
     private final List<ItemStack> clearInput;
     @Getter
     private final List<ItemStack> toolWithoutModifier;
@@ -226,21 +243,23 @@ public class BannerModifierRecipe implements ITinkerStationRecipe, IMultiRecipe<
     private final List<ItemStack> toolWithModifier;
     @Getter
     private final Component variant;
-    private final DyeColor dye;
-    private final BannerPatternLayers patterns;
-    public DisplayRecipe(Identifier recipeId, List<ItemStack> tools, @Nullable DyeColor dye, List<ItemStack> banner,
-                         List<ItemStack> clearInput, BannerPatternLayers patterns) {
+    public DisplayRecipe(Identifier recipeId, List<ItemStack> tools, List<ItemStack> banners, List<ItemStack> clearInput) {
       this.recipeId = recipeId;
       this.toolWithoutModifier = tools;
-      this.banner = banner;
+      this.banners = banners;
       this.clearInput = clearInput;
-      this.dye = dye;
-      this.variant = dye != null ? Component.translatable("color.minecraft." + dye.getSerializedName()) : TConstruct.makeTranslation("recipe", "banner.clear");
-      this.patterns = patterns;
-
-      ModifierId key = RESULT.getId();
+      if (!clearInput.isEmpty()) {
+        this.variant = TConstruct.makeTranslation("recipe", "banner.clear");
+      } else {
+        this.variant = TConstruct.makeTranslation("recipe", "banner.solid");
+      }
+      // build tools with modifier
       List<ModifierEntry> results = List.of(RESULT);
-      toolWithModifier = tools.stream().map(stack -> IDisplayModifierRecipe.withModifiers(stack, DEFAULT_TOOL_STACK_SIZE, results, data -> BannerModule.copyPatterns(data, key, dye, patterns))).toList();
+      ModifierId key = RESULT.getId();
+      // apply a default pattern to the result tools for the sake of offbrand JEI. You will never see it in real JEI
+      DyeColor defaultColor = clearInput.isEmpty() ? DyeColor.WHITE : null;
+      BannerPatternLayers defaultPatterns = getBannerPatterns(banners.get(0));
+      toolWithModifier = tools.stream().map(stack -> IDisplayModifierRecipe.withModifiers(stack, DEFAULT_TOOL_STACK_SIZE, results, data -> BannerModule.copyPatterns(data, key, defaultColor, defaultPatterns))).toList();
     }
 
     @Override
@@ -256,12 +275,23 @@ public class BannerModifierRecipe implements ITinkerStationRecipe, IMultiRecipe<
     @Override
     public List<ItemStack> getDisplayItems(int slot) {
       if (slot == 0) {
-        return banner;
+        return banners;
       }
       if (slot == 1) {
         return clearInput;
       }
       return List.of();
+    }
+
+    @Override
+    public List<ItemStack> getDisplayItems(int slot, ItemStack focus, boolean focusOutput) {
+      // if focus input is a banner with patterns, use that
+      if (slot == 0 && !focusOutput && !focus.isEmpty() && focus.getItem() instanceof BannerItem
+          // skip using it if the example pattern lacks patterns, as that won't give a useful result
+          && (clearInput.isEmpty() || !getBannerPatterns(focus).layers().isEmpty())) {
+        return List.of(focus.copyWithCount(1));
+      }
+      return getDisplayItems(slot);
     }
 
     @Override
@@ -282,10 +312,41 @@ public class BannerModifierRecipe implements ITinkerStationRecipe, IMultiRecipe<
 
     @Override
     public void applyModifier(ToolStack tool) {
+      // you aren't really going to see this tool, but offbrand recipe viewers may not call the other hook
       ModifierId modifier = TinkerModifiers.banner.getId();
-      BannerModule.copyPatterns(tool.getPersistentData(), modifier, dye, patterns);
+      BannerModule.copyPatterns(tool.getPersistentData(), modifier, clearInput.isEmpty() ? DyeColor.WHITE : null, getBannerPatterns(banners.get(0)));
+
+      // add the modifier if missing
       if (tool.getModifierLevel(modifier) == 0) {
         tool.addModifier(modifier, 1);
+      }
+    }
+
+    @Override
+    public boolean isSlotsDynamic() {
+      return true;
+    }
+
+    @Override
+    public void onDisplayUpdate(RecipeSlot<ItemStack> toolSlot, RecipeSlots<ItemStack> inputs, RecipeSlot<ItemStack> output) {
+      // add banner to the currently displayed tool from the currently displayed banner
+      ItemStack bannerStack = inputs.get(0);
+      // apply banner to display tool
+      ItemStack toolStack = toolSlot.get();
+      if (!toolStack.isEmpty() && bannerStack.getItem() instanceof BannerItem banner) {
+        BannerPatternLayers patterns = getBannerPatterns(bannerStack);
+        // if clear, skip the color. Still better that we have a BannerItem though
+        DyeColor dye = clearInput.isEmpty() ? banner.getColor() : null;
+        ToolStack tool = ToolStack.copyFrom(toolStack);
+        ModifierId modifier = RESULT.getId();
+        BannerModule.copyPatterns(tool.getPersistentData(), modifier, dye, patterns);
+
+        // add the modifier if missing
+        if (tool.getModifierLevel(modifier) == 0) {
+          tool.addModifier(modifier, 1);
+        }
+        // build the display stack
+        output.set(tool.copyStack(toolStack));
       }
     }
 
